packages/core/src/toast/Toast.css
/* Styles applied to Toast root element */
.saltToast {
  --toast-background: var(--salt-container-primary-background);
  --toast-borderColor: var(--salt-container-primary-borderColor);
  --toast-iconColor: var(--salt-content-primary-foreground);

  background: var(--saltToast-background, var(--toast-background));
  border-color: var(--saltToast-borderColor, var(--toast-borderColor));
  border-width: var(--saltToast-borderWidth, var(--salt-size-border));
  border-style: var(--saltToast-borderStyle, var(--salt-container-borderStyle));
  border-radius: var(--saltToast-borderRadius, var(--salt-palette-corner, 0));

  box-sizing: border-box;
  box-shadow: var(--salt-overlayable-shadow-popout);
  display: flex;
  gap: var(--salt-spacing-75);
  padding: var(--saltToast-padding, var(--salt-spacing-100));
  min-height: calc(var(--salt-size-base) + var(--salt-spacing-100));
  margin: 0 var(--salt-spacing-100) var(--salt-spacing-100) var(--salt-spacing-100);

  font-family: var(--salt-text-fontFamily);
  font-size: var(--salt-text-fontSize);
  font-weight: var(--salt-text-fontWeight);
  line-height: var(--salt-text-lineHeight);
}

.saltToast:last-child {
  margin-bottom: var(--salt-spacing-200);
}

/* Styles applied to icon */
.saltToast-iconContainer > .saltIcon {
  margin: calc(var(--salt-spacing-75) + 2px) 0 var(--salt-spacing-75) 0;
  color: var(--toast-iconColor);
}

/* Styles applied when state = "info" */
.saltToast-info {
  --toast-borderColor: var(--salt-status-info-borderColor);
  --toast-iconColor: var(--salt-status-info-foreground-decorative);
}

/* Styles applied when state = "error" */
.saltToast-error {
  --toast-borderColor: var(--salt-status-error-borderColor);
  --toast-iconColor: var(--salt-status-error-foreground-decorative);
}

/* Styles applied when state = "warning" */
.saltToast-warning {
  --toast-borderColor: var(--salt-status-warning-borderColor);
  --toast-iconColor: var(--salt-status-warning-foreground-decorative);
}

/* Styles applied when state = "success" */
.saltToast-success {
  --toast-borderColor: var(--salt-status-success-borderColor);
  --toast-iconColor: var(--salt-status-success-foreground-decorative);
}

